--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,8 +1,44 @@
 <html lang="en">
-    <head>
-        <title>Evolving Posters</title>
-    </head>
-    <body>
-        <p>Hello World!</p>
-    </body>
+<head>
+    <title>Evolving Posters</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="bundle.css">
+</head>
+<body>
+<main></main>
+<aside class="container">
+    <div class="row">
+        <section id="input-form">
+            <form>
+                <div class="form-group row mb-2">
+                    <label for="formControlTextarea" class="col-sm-2 col-form-label-sm">Input Text</label>
+                    <textarea class="form-control" id="FormControlTextarea" class="col-sm-10" rows="6"></textarea>
+                </div>
+                <div class="form-group row mb-2">
+                    <label for="formControlTextDelimiter">Text Line delimiter</label>
+                    <input class="form-control form-control-lg" id="formControlTextDelimiter" type="text"
+                           placeholder="|">
+                </div>
+                <div class="form-group row mb-2">
+                    <label for="exampleFormControlImages">Example file input</label>
+                    <input type="file" class="form-control-file" id="exampleFormControlImages">
+                </div>
+                <div class="form-group row mb-2">
+                    <label for="formControlImagePlaceholderDelimiter">Image Placeholder Delimiter</label>
+                    <input class="form-control form-control-lg" id="formControlImagePlaceholderDelimiter" type="text"
+                           placeholder="§">
+                </div>
+                <div class="form-check form-check-inline mb-2">
+                    <input class="form-check-input" type="checkbox" value="1" id="lineDivisionCheck">
+                    <label class="form-check-label" for="lineDivisionCheck"> Automatic line division</label>
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                </div>
+            </form>
+        </section>
+    </div>
+</aside>
+<script src="bundle.js"></script>
+</body>
 </html>
