--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,19 +5,57 @@
     <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
-<main></main>
-<aside class="container">
+    <div class="temp-results container-fluid bg-light d-none" id="error-handle">
+        <div class="row">
+            <section class="col-12 bg-warning p-3">
+                <span id="err-message" class=""></span>
+            </section>
+        </div>
+    </div>
+    <div class="temp-results container-fluid bg-light d-none" id="temp-info">
+        <div class="row">
+            <section class="col-10 offset-1 my-5">
+                <h1 class="mb-3">Emotional analysis Results</h1>
+                <div>
+                    <b class="d-inline">Text:</b>
+                    <p id="temp-res-text" class="d-inline"></p>
+                </div>
+                <div>
+                    <b class="d-inline">Sentences:</b>
+                    <p id="temp-res-sentences" class="d-inline"></p>
+                </div>
+                <div class="mt-4">
+                    <b class="d-inline">Classification results=</b>
+                    <p id="temp-res-classification" class="d-inline"></p>
+                </div>
+                <div class="mt-4">
+                    <b>Lexicon results</b>
+                    <div id="temp-res-lexicon-lines"></div>
+                    <p id="temp-res-lexicon-global"></p>
+                </div>
+            </section>
+        </div>
+    </div>
+<aside class="container-fluid">
     <div class="row">
-        <section id="input-form">
-            <form>
+        <section class="input-form-outer col-10 offset-1 mt-5">
+            <form id="input-form" class="input-form-inner">
                 <div class="form-group row mb-2">
                     <label for="formControlTextarea" class="col-sm-2 col-form-label-sm">Input Text</label>
-                    <textarea class="form-control" id="FormControlTextarea" class="col-sm-10" rows="6"></textarea>
+                    <textarea class="form-control col-sm-10" id="formControlTextarea" rows="6" required></textarea>
+                </div>
+                <!-- TODO: select required -->
+                <div class="form-group row mb-2">
+                    <label for="formControlLang">Language</label>
+                    <input class="form-control form-control-lg" id="formControlLang" type="text" value="en" required>
+                </div>
+                <div class="form-check form-check-inline mb-2">
+                    <input class="form-check-input" type="checkbox" value="1" id="lineDivisionCheck" checked>
+                    <label class="form-check-label" for="lineDivisionCheck"> Automatic line division</label>
                 </div>
                 <div class="form-group row mb-2">
                     <label for="formControlTextDelimiter">Text Line delimiter</label>
-                    <input class="form-control form-control-lg" id="formControlTextDelimiter" type="text"
-                           placeholder="|">
+                    <input class="form-control form-control-lg" id="formControlTextDelimiter" type="text" value="¶">
                 </div>
                 <div class="form-group row mb-2">
                     <label for="exampleFormControlImages">Example file input</label>
@@ -27,10 +65,6 @@
                     <label for="formControlImagePlaceholderDelimiter">Image Placeholder Delimiter</label>
                     <input class="form-control form-control-lg" id="formControlImagePlaceholderDelimiter" type="text"
                            placeholder="§">
-                </div>
-                <div class="form-check form-check-inline mb-2">
-                    <input class="form-check-input" type="checkbox" value="1" id="lineDivisionCheck">
-                    <label class="form-check-label" for="lineDivisionCheck"> Automatic line division</label>
                 </div>
                 <div class="col-auto">
                     <button type="submit" class="btn btn-primary mb-2">Submit</button>
