feat(interface) #3: minor fixes

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,10 +47,10 @@
                         <label for="formControlTextarea" class="col-sm-2 col-form-label-sm">Input Text</label>
                         <textarea class="form-control col-sm-10" id="formControlTextarea" rows="6" required></textarea>
                     </div>
-                    <!-- TODO: select required -->
                     <div class="form-group row mb-2">
                         <label for="formControlLang">Language</label>
-                        <input class="form-control form-control-lg" id="formControlLang" type="text" value="en" required>
+                        <select class="form-control form-control-lg" id="formControlLang" type="text">
+                        </select>
                     </div>
                     <div class="my-5"></div>
                     <div class="form-check form-check-inline mb-2" id="lineDivisionField">
