feat:add bt new generation

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -81,6 +81,7 @@
                     <div class="my-5"></div>
                     <div class="col-auto">
                         <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                        <button type="button" class="btn btn-secondary mb-2 mx-3"  onClick="window.location.reload();">New Analysis</button>
                     </div>
                 </fieldset>
             </form>
