--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,11 +1,13 @@
 <html lang="en">
 <head>
+    <!-- TODO: meta information -->
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="bundle.css">
     <script src="bundle.js"></script>
 </head>
 <body>
+    <!-- warning message -->
     <div class="temp-results container-fluid bg-light d-none" id="error-handle">
         <div class="row">
             <section class="col-12 bg-warning p-3">
