--- a/src/rollup-project/index.html
+++ b/src/rollup-project/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- export html -->
+    <!-- TODO: meta information -->
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" href="bundle.css"> -->
-    <script src="bundle.js"></script>
 </head>
 <body>
-    <p>rollup-project index</p>
+    <script src="./build/bundle.min.js"></script>
 </body>
 </html>
