feat(module1 #15): bundle css

--- a/src/rollup-project/index.html
+++ b/src/rollup-project/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- export html -->
     <!-- TODO: meta information -->
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
-    <!-- <link rel="stylesheet" href="bundle.css"> -->
+    <link rel="stylesheet" href="./build/bundle.min.css">
 </head>
 <body>
     <script src="./build/bundle.min.js"></script>
+    <!-- on load -->
 </body>
 </html>
