--- a/src/rollup-project/index.html
+++ b/src/rollup-project/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- TODO: meta information -->
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./build/bundle.min.css">
 </head>
 <body>
