--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./build/bundle.min.css">
+    <script src="./build/bundle.min.js"></script>
 </head>
 <body>
-    <script src="./build/bundle.min.js"></script>
+    <App></App>
 </body>
 </html>
