refactor: config rollup and lit #23 #22

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,10 @@
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./build/bundle.min.css">
-    <script src="./build/bundle.min.js"></script>
+    <link rel="stylesheet" href="bundle.css">
+    <script src="./app.js" type="module"></script>
 </head>
 <body>
-    <App></App>
+    <main class="container-fluid"></main>
 </body>
 </html>
