feat: recode and refine new input-module comp #22

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,7 @@
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="bundle.css">
+    <link rel="stylesheet" href="./bundle.css">
     <script src="./app.js" type="module"></script>
 </head>
 <body>
