feat: lit parsing components #22

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,8 +4,9 @@
     <title>Evolving Posters</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./bundle.css">
     <script src="./app.js" type="module"></script>
+    <link rel="stylesheet" href="bundle.css">
+
 </head>
 <body>
     <main class="container-fluid"></main>
