--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <title>Evolving Posters</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./app.js" type="module"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="bundle.css">
 
 </head>
 <body>
     <main></main>
-</body>
-</html>
+
+
+<script type="module" src="./app.js"></script></body></html>
