--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><title>Evolving Posters</title><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="bundle.css"></head><body><main></main><script type="module" src="./app.js"></script></body></html>
+<!doctype html><html lang="en"><head><title>Evolving Posters</title><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="bundle.css"></head><body><main></main><script type="module" src="./main.js"></script></body></html>
